compiler/tests/compiler/must_fail/t_29.mil
// call to unknown functions

fn bar() {
}

fn foo() {
  x : stack u64;
  x = 42;
  bar_();
}

/*
START:CMD
ARG="typecheck"
END:CMD
*/
